# stock-price-prediction

./: .gitignore  README.md  ROADMAP.md  project-description.md  pyproject.toml
data/: README.md
models/: README.md
notebooks/: 01_data_exploration.ipynb  02_model_test_lstm.ipynb  02_model_test_ltsm.ipynb  02_model_testing.ipynb  02_ridge_model.ipynb  AAPL_balance_sheet_transposed.csv  AAPL_income_statement_transposed.csv  README.md  test_your_env.ipynb
reports/: README.md
scripts/: README.md  seed_data.py
